--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "OpenMedicsHK",
-  "short_name": "OpenMedicsHK",
+  "name": "Our Healthcare HK",
+  "short_name": "OurHealthcareHK",
   "theme_color": "#585858",
   "background_color": "#FFFFFF",
   "display": "standalone",
