--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title:          OpenMedicsHK
-description:    "Raising awareness for the healthcare crises in Hong Kong"
+title:          Our Healthcare HK
+description:    "Raising awareness for the healthcare system in Hong Kong"
 baseurl:        ""
 url:            "https://openmedicshk.github.io"
 
